modify some section

--- a/themes/lesterm-lesterm/layouts/default.htm
+++ b/themes/lesterm-lesterm/layouts/default.htm
@@ -5,8 +5,7 @@ description = "Default Layout"
 <div id="preloader"></div>
 <div id="top"></div>
 
-{% partial 'landing' %}
-
 {% partial 'navigation' %}
+{% partial 'carousel' %}
 {% page %}
 {% partial 'footer' %}
