--- a/themes/lesterm-lesterm/partials/navigation.htm
+++ b/themes/lesterm-lesterm/partials/navigation.htm
@@ -1,6 +1,6 @@
 <!-- NAVIGATION -->
 <div id="menu">
-    <nav class="navbar-wrapper navbar-default" role="navigation">
+    <nav class="navbar-wrapper navbar-default fixed-navbar" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-backyard">
